# AGCAM

./: CMakeLists.txt  README.md  camera_calib.npy
Camera/log/: error_20221210-053109.3196  error_20221210-053726.7042  error_20221210-053759.7363  error_20221210-054127.8526  error_20221210-054223.8894  error_20221210-054443.9358  error_20221210-054543.9676  error_20221210-055107.10534  error_20221210-055243.10867  error_20221210-055604.11707  error_20221210-060015.13088  error_20221210-075952.22176  error_20221210-091755.35609  error_20221210-091949.36474  error_20221210-092010.36607  warning_20221210-054027.7502
images/: camera_calib.npy
script/: github.txt
script/Displacement/DisplacementData/: .~lock.PoseCam1 (copy).csv#
script/Displacement/DisplacementData/backup/: PoseCam1 (copy).csv  PoseCam2.txt  PoseCam3.txt
script/Displacement/cam1/: FPS_CAM_1.csv  FPS_livePlot.py  GigEcameraParameters.txt  POSE.py  POSE_test.py  POSEestimation_cam1.py  POSEestimation_liveFPS_cam1.py  PoseCam1.txt  calibration_matrix.npy  distortion_coefficients.npy  fps.csv  fps_webcam.txt  framerate.txt  gigecam_calib.npy  gigecam_calib.py  liveplots.py  plot_fps.py  pose_estimation_to_copy.py  pose_gigecam1.py  pose_gigecam_cam3.py  readingCamPar.py
script/Displacement/cam1/Camera/Data/: 052120120268.mvdat
script/Displacement/cam2/: GigEcameraParameters_new.txt  POSEestimation_cam2.py  PoseCam2.txt  calib_process_gige.py  calibration_matrix.npy  distortion_coefficients.npy  gigecam_calib.npy  gigecam_calib.py  pose_gigecam_cam3.py  pose_gigecam_ros_driver.py  utils.py
script/Displacement/cam2/Camera/log/: error_20221210-041053.10265  warning_20221208-131035.9318
script/Displacement/cam3/: GigEcameraParameters_new.txt  POSEestimation_cam3.py  PoseCam3.txt  calibration_matrix.npy  distortion_coefficients.npy  excelWriter.py  gigecam_calib.py  pose_gigecam.py  pose_gigecam1.py  pose_gigecam_cam3.py  readingCamPar.py
script/Displacement/cam3/Camera/Data/: 052120120267.mvdat
script/Displacement/cam3/Camera/log/: warning_20221208-112204.60763
script/GigEcam_py/: GigEcameraParameters.txt  GigEcameraParameters_new.txt  calib_process_gige.py  calibration_matrix.npy  distortion_coefficients.npy  gigecam1.py  gigecam_calib.npy  gigecam_calib.py  pose_gigecam.py  pose_gigecam2.py  pose_gigecam3.py  pose_gigecam_cam3.py  readingCamPar.py
script/GigEcam_py/calib/: calibration_matrix.npy  distortion_coefficients.npy
script/picam/: pi_camera_thread.py
script/webcam_omen/: calibration.py  calibration_matrix.npy  camera_calib.npy  distortion_coefficients.npy  generate_aruco_tags.py  pose_estimation.py  readingCamPar.py  vid_rec.py  webcam_calib.py
script/webcam_omen/calibration_checkerboard/: camera.txt
script/webcam_py/: calibration_matrix.npy  camera_calib.npy  detect_aruco_images.py  detect_aruco_video.py  distortion_coefficients.npy  pose_estimation.py  utils.py  vid_rec.py  webcam.py  webcamPar.txt  webcam_calib.py  webcam_pose.py
script/webcam_py/liveplot/: data.csv  fps_webcam.csv  gen_data.py  live_plot.py  webcam_fps_csv.py  webcam_fps_livePlot.py
src/: arucoGigE.cpp  calibGigE.cpp
src/picam_driver/: CMakeLists.txt  package.xml
src/picam_driver/src/: driver.cpp
